index.css
html{
    scroll-behavior: smooth;
}
body{
    background-color: aliceblue;
    margin: 0;
}
header{
    text-align: right;
    background-color: rgb(24, 39, 54);
    color: gainsboro;
    padding-top: 0.5rem;
}
nav{
    background-color:rgb(24, 39, 54);
    width: 100%;
    display: block;
    overflow: hidden;
    position: fixed;
    margin-top: -0.5rem;
}
nav ul{
    list-style-type: none;
    padding-right: 1rem;
}
nav ul li{
    display: inline;
    padding: 0.5rem;
    margin: 0.5rem;
}
nav ul li a {
    font-size: 1.5rem;
    text-decoration: none;
    color: gainsboro;
}
.about{
    margin: 2rem;
    margin-top: 0;
}
.about h1{
    font-size: 60px;
    text-align: left;
    padding-left: 7rem;
}
.about h2{
    font-size: 30px;
    text-align: left;
    padding-left: 7rem;
    padding-bottom: 3rem;
}
.projects{
    padding: 0;
    margin: 0;
}
.projects h1{
    text-align: center;
    font-size: 40px;
    color: lightslategray;
    padding-top: 1rem;
}
.projects p{
    text-align: left;
    font-size: 30px;
    color:lightslategray;
    padding: 0;
    padding-bottom: 0.5rem;
    margin: 0;
}
.portfolio{
    padding: 0rem 15rem;
}
.portfolio ul{
    border-top: 1px solid black;
    padding: 0;
    margin: 0;
    text-align: center;
    list-style-type: none;
}   
.portfolio li{
    margin: 1.5rem 0.5rem;
}
.portfolio ul h2{
    text-align: center;
    font-size: 30px;
    margin: 0;
}
.portfolio h3{
    color: lightslategray;
    border-bottom: 1px solid black;
}
img{
    width: 100%;
    height: auto;
}
#image1,#image2,#image3 {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#image1:hover {opacity: 0.7;}
#image2:hover {opacity: 0.7;}
#image3:hover {opacity: 0.7;}

.modal {
display: none; 
position: fixed; 
z-index: 1; 
padding-top: 100px; 
left: 0;
top: 0;
width: 100%; 
height: 100%; 
overflow: auto; 
background-color: rgb(0,0,0); 
background-color: rgba(0,0,0,0.9); 
}

.modal-content {
margin: auto;
display: block;
width: 80%;
height: 80%;
}

#caption {
margin: auto;
display: block;
width: 80%;
max-width: 700px;
text-align: center;
color: #ccc;
padding: 10px 0;
height: 150px;
}

.modal-content, #caption {  
-webkit-animation-name: zoom;
-webkit-animation-duration: 0.3s;
animation-name: zoom;
animation-duration: 0.3s;
}

@-webkit-keyframes zoom {
from {-webkit-transform:scale(0)} 
to {-webkit-transform:scale(1)}
}

@keyframes zoom {
from {transform:scale(0)} 
to {transform:scale(1)}
}

@-webkit-keyframes fadeOut {
    0% {opacity: 1;}
    100% {opacity: 0;}
 }

@keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
     }
}
@-webkit-keyframes fadeIn {
    100% {
        opacity: 1;
    }
 }

@keyframes fadeIn {
    100% {
        opacity: 1;
    }
}

.close {
position: absolute;
top: 15px;
right: 35px;
color: #f1f1f1;
font-size: 40px;
font-weight: bold;
transition: 0.3s;
}

.close:hover,
.close:focus {
color: #bbb;
text-decoration: none;
cursor: pointer;
}


@media only screen and (max-width: 700px){
    .modal-content {
        width: 100%;
    }
}
footer{
    background-color: rgb(24, 39, 54);
    text-align: center;
    color: gainsboro;
}
footer h1 , h3{
    margin: 0;
    padding: 1rem;
}
footer h1{
    font-size: 2rem;
    padding-bottom: 1.5rem;
    padding-top: 0;
}

/*loader CSS*/

#loader{
	position: fixed;
	width: 100%;
	height: 100%;
	background:rgba(207,239,246,255) url('images/loader.gif') no-repeat center;
	z-index: 999;
    animation: fadeIn 1s ease-in forwards, fadeOut 3s 1s ease-out forwards;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

